# fast-api-test

./: main.py  pyproject.toml
database/: __init__.py  models.py
